# tiles-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  RELEASING.md  SPEC.md  pyproject.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
connectors/: README.md
connectors/github/: README.md  adapter.py  manifest.yaml
connectors/gmail/: adapter.py  manifest.yaml
connectors/gmail-live/: adapter.py  manifest.yaml
connectors/local-files/: README.md  adapter.py  manifest.yaml
connectors/slack/: README.md  adapter.py  manifest.yaml
connectors/web-search/: README.md  adapter.py  manifest.yaml
docs/: AUTHORING.md  GMAIL.md
examples/mcp_servers/: files_server.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  styles.css  types.ts
frontend/src/components/: ActivityFeed.tsx  AddConnectorForm.tsx  Approvals.tsx  EditConnectorForm.tsx  EditTileForm.tsx  Issues.tsx  NewTileForm.tsx  Onboarding.tsx  Settings.tsx  TileCard.tsx  TileIcon.test.tsx  TileIcon.tsx  TileSettings.tsx  TileSheet.tsx
frontend/src/lib/: grouping.test.ts  grouping.ts  runResult.test.ts  runResult.ts
frontend/src/test/: fixtures.ts
sample_docs/: meeting.txt  project-notes.md
scripts/: bundle_starter.py
src/tiles_ai/: __init__.py  bootstrap.py  cli.py  handlers.py  oauth.py  scaffold.py  secrets.py
src/tiles_ai/api/: __init__.py  __main__.py  app.py  factory.py  schemas.py
src/tiles_ai/connectors/: __init__.py  mcp.py  mock.py
src/tiles_ai/contracts/: __init__.py  connector.py  connector_manifest.py  ids.py  lifecycle.py  permissions.py  provider_config.py  tile.py  tile_manifest.py  validation.py
src/tiles_ai/events/: __init__.py
src/tiles_ai/model/: __init__.py  adapter.py  clients.py  store.py
src/tiles_ai/registry/: __init__.py  loader.py  registry.py
src/tiles_ai/runtime/: __init__.py  gate.py  handles.py  runtime.py  scheduler.py
tests/: test_api.py  test_bootstrap.py  test_brain_resolution.py  test_connector_manifest.py  test_events.py  test_flows.py  test_gate.py  test_gmail_connector.py  test_instant_tiles.py  test_interfaces.py  test_lifecycle.py  test_mcp_connector.py  test_mcp_http.py  test_model_adapter.py  test_model_clients.py  test_oauth.py  test_pack_handlers.py  test_permissions.py  test_registry.py  test_runtime_reference.py  test_scaffold.py  test_scheduler.py  test_secrets.py  test_tile_manifest.py  test_validation.py  test_yaml_loading.py
tiles/: README.md
tiles/ask/: README.md  handler.py  manifest.yaml
tiles/ask-my-files/: README.md  handler.py  manifest.yaml
tiles/brainstorm/: README.md  handler.py  manifest.yaml
tiles/extract/: README.md  handler.py  manifest.yaml
tiles/find-files/: README.md  handler.py  manifest.yaml
tiles/github-comment/: README.md  handler.py  manifest.yaml
tiles/github-triage/: README.md  handler.py  manifest.yaml
tiles/inbox-summary/: README.md  handler.py  manifest.yaml
tiles/live-inbox-summary/: README.md  handler.py  manifest.yaml
tiles/live-reply-drafter/: README.md  handler.py  manifest.yaml
tiles/reply-drafter/: README.md  handler.py  manifest.yaml
tiles/research/: README.md  handler.py  manifest.yaml
tiles/slack-catchup/: README.md  handler.py  manifest.yaml
tiles/slack-drafter/: README.md  handler.py  manifest.yaml
tiles/summarize/: README.md  handler.py  manifest.yaml
tiles/summarize-folder/: README.md  handler.py  manifest.yaml
tiles/tidy-folder/: README.md  handler.py  manifest.yaml
tiles/translate/: README.md  handler.py  manifest.yaml
tiles/web-search/: README.md  handler.py  manifest.yaml
